--- a/themes/paas/css/document.css
+++ b/themes/paas/css/document.css
@@ -284,7 +284,7 @@ padding-top:0.2em;
 text-decoration:none;
 }
 /* navtree */
-li.selected div a.navTreeCurrentItem {
+dd.portletItem LI.active A{
 background-color:#A5A5A5;
 border:0px;
 color:#FFF;
