--- a/themes/bootstrap/css/default.css
+++ b/themes/bootstrap/css/default.css
@@ -1,25 +1,39 @@
 .footer {
-  color: #999;
-  background-color: #292929;
+  color: #777;
+  background-color: #f5f5f5;
   padding: 15px 0;
+  border-top: 1px solid #e5e5e5;
 }
 
 .footer a {
-  color: #999;
+  color: #777;
 }
 
 .links {
   padding-top: 10px;
-  color: #999;
+  color: #777;
   text-align: center;
-}
-
-.links a {
-  color: #999;
 }
 
 .weibo {
   margin-top: 20px;
+}
+
+.docs-container {
+  border-bottom: 1px solid #eee;
+}
+.docs-header {
+  margin-top: -10px;
+}
+
+.docs-container h1 {
+  padding-bottom: 9px;
+  margin: 40px 0 20px;
+  border-bottom: 1px solid #eee;
+}
+
+.docs-header h1 {
+  color: #222;
 }
 
 .docs-container {
@@ -28,4 +42,42 @@
 
 .sidenav span{
   margin-left: 20px;
+}
+
+.docs-header {
+  color: #222;
+  background-color: #eee;
+}
+
+.docs-nav {
+  background-color: #222;
+  border-color: #222;
+}
+
+.docs-nav .navbar-nav > .active > a, .docs-nav .navbar-nav > .active > a:hover {
+  background-color: #080808;
+}
+
+.docs-nav .navbar-nav > li > a {
+  color: #999;
+}
+
+.links a {
+  font-family: "微软雅黑","黑体","宋体","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 12px;
+}
+
+.content, .topic {
+  float: right;
+  padding:10px 10px;
+  border:1px solid #E0E0E0;
+  background:#FAFAFA;
+}
+
+.topic h1 {
+  font-size: 18px;
+}
+
+.topic ul{
+  list-style-type: none;
 }
